# SpecialMethodsOfProgramming

./: .gitignore  README.md
solve_equation/: Cargo.toml
solve_equation/src/: main.rs
solve_equation_in_compile_time/: Cargo.toml
solve_equation_in_compile_time/src/: main.rs
task1_solve_equation/src/: main.rs
task1_solve_equation_at_compile_time/: Cargo.toml
task2_solve_polynomial_equation/: Cargo.toml
task3_find_min_with_fixed_precision/: Cargo.toml
task4_find_min/: Cargo.toml
task4_find_min/src/: main.rs
task5_fit_data/: Cargo.toml
task5_fit_data/asm_cmp/error_msg/: format.ll  src.rs
task5_fit_data/asm_cmp/index_of_min_with_ceil_llvm_asm/: combmatch.asm  combmatch_native.ll  default.asm  default_native.ll  src.rs
task5_fit_data/asm_cmp/return_option_vs_result_to_option/: option.asm  result_to_option.ll  src.rs
task5_fit_data/asm_cmp/unwrap_with_my_error/: early_return.asm  match.asm  src.rs
task5_fit_data/src/: extensions.rs  fit.rs  function.rs  function_and_params.rs  main.rs  param.rs  params.rs  point.rs  points.rs  utils_io.rs
task6_deconvolution/: Cargo.toml
task6_deconvolution/data/: data0.dat_  data0.dat_norm  data2.dat_  data2.dat_norm  data3.dat_  data3.dat_norm  data4.dat_  data4.dat_norm  inst0.dat_  inst0.dat_norm  inst2.dat_  inst2.dat_norm  inst3_fixed.dat_  inst3_fixed.dat_norm  inst3_unfixed.dat_  inst3_unfixed.dat_norm  inst4.dat_  inst4.dat_norm  normalize.py  results_data0_inst0.dat_norm  results_data2_inst2.dat_norm  results_data3_inst3_fixed.dat_norm  results_data3_inst3_unfixed.dat_norm  results_data4_inst4.dat_norm  spectr0.dat_
task6_deconvolution/src/: extensions.rs  io.rs  main.rs  math_aliases.rs
(+3 files in other folders)
